<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="rend" type="com.roix.inhype.ui.renderers.CategoriesRenderer" />

    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout

            android:id="@+id/non_expanded"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:gravity="center"
                android:layout_margin="@dimen/ic_categories_image_padding"
                android:padding="@dimen/ic_categories_image_padding"

                android:id="@+id/header_icon"
                android:layout_width="@dimen/ic_category_size"
                android:layout_height="@dimen/ic_category_size" />

            <TextView
                android:id="@+id/header_text"
                android:textColor="@color/colorPrimary"
                android:text="@string/category_choose"
                android:layout_centerInParent="true"
                android:textSize="15.9sp"
                android:fontFamily="sans-serif-light"
                android:textStyle="normal"
                android:gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_margin="@dimen/ic_categories_image_padding"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:id="@+id/header_arrow"
                android:src="@drawable/arrow_down"
                android:layout_width="15dp"
                android:layout_height="15dp" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/expanded"
            android:visibility="gone"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_margin="@dimen/ic_categories_padding"
                    android:gravity="center"
                    android:onClick="@{()-> rend.onClickCategoryNo()}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_margin="@dimen/ic_categories_image_padding"
                        android:gravity="center"

                        android:layout_width="@dimen/ic_categories_size"
                        android:layout_height="@dimen/ic_categories_size"
                        android:src="@mipmap/ava" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumBlackText"

                        android:text="@string/category_no" />
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/ic_categories_padding"
                    android:gravity="center"
                    android:onClick="@{()-> rend.onClickCategoryAnimal()}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_margin="@dimen/ic_categories_image_padding"
                        android:gravity="center"

                        android:layout_width="@dimen/ic_categories_size"
                        android:layout_height="@dimen/ic_categories_size"
                        android:src="@drawable/cat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumBlackText"
                        android:text="@string/category_animal" />

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/ic_categories_padding"
                    android:gravity="center"
                    android:onClick="@{()-> rend.onClickCategoryFood()}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_margin="@dimen/ic_categories_image_padding"
                        android:gravity="center"

                        android:layout_width="@dimen/ic_categories_size"
                        android:layout_height="@dimen/ic_categories_size"
                        android:src="@drawable/hamburger" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumBlackText"

                        android:text="@string/category_food" />

                </LinearLayout>

                <LinearLayout
                    android:gravity="center"
                    android:onClick="@{()-> rend.onClickCategoryNature()}"

                    android:layout_margin="@dimen/ic_categories_padding"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_margin="@dimen/ic_categories_image_padding"
                        android:gravity="center"

                        android:layout_width="@dimen/ic_categories_size"
                        android:layout_height="@dimen/ic_categories_size"
                        android:src="@drawable/goal" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumBlackText"

                        android:text="@string/category_nature" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:onClick="@{()-> rend.onClickCategorySport()}"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_margin="@dimen/ic_categories_padding"
                    android:gravity="center"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_margin="@dimen/ic_categories_image_padding"
                        android:gravity="center"

                        android:layout_width="@dimen/ic_categories_size"
                        android:layout_height="@dimen/ic_categories_size"
                        android:src="@drawable/weight" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumBlackText"

                        android:text="@string/category_sport" />
                </LinearLayout>

                <LinearLayout
                    android:onClick="@{()-> rend.onClickCategoryGames()}"

                    android:layout_margin="@dimen/ic_categories_padding"
                    android:gravity="center"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_margin="@dimen/ic_categories_image_padding"
                        android:gravity="center"

                        android:layout_width="@dimen/ic_categories_size"
                        android:layout_height="@dimen/ic_categories_size"
                        android:src="@drawable/game" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumBlackText"

                        android:text="@string/category_games" />

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/ic_categories_padding"
                    android:gravity="center"
                    android:onClick="@{()-> rend.onClickCategoryCosplay()}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_margin="@dimen/ic_categories_image_padding"
                        android:gravity="center"

                        android:layout_width="@dimen/ic_categories_size"
                        android:layout_height="@dimen/ic_categories_size"
                        android:src="@drawable/carnaval" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumBlackText"

                        android:text="@string/category_cosplay" />

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/ic_categories_padding"
                    android:gravity="center"
                    android:onClick="@{()-> rend.onClickCategoryPeoples()}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_margin="@dimen/ic_categories_image_padding"
                        android:gravity="center"

                        android:layout_width="@dimen/ic_categories_size"
                        android:layout_height="@dimen/ic_categories_size"
                        android:src="@drawable/network" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumBlackText"

                        android:text="@string/category_peoples" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_margin="@dimen/ic_categories_padding"
                    android:gravity="center"
                    android:onClick="@{()-> rend.onClickCategoryBeauty()}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView

                        android:layout_margin="@dimen/ic_categories_image_padding"
                        android:gravity="center"

                        android:layout_width="@dimen/ic_categories_size"
                        android:layout_height="@dimen/ic_categories_size"
                        android:src="@drawable/lipstick" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumBlackText"

                        android:text="@string/category_beauty" />
                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/ic_categories_padding"
                    android:gravity="center"
                    android:onClick="@{()-> rend.onClickCategoryPrestige()}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_margin="@dimen/ic_categories_image_padding"
                        android:gravity="center"

                        android:layout_width="@dimen/ic_categories_size"
                        android:layout_height="@dimen/ic_categories_size"
                        android:src="@drawable/ingot" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumBlackText"

                        android:text="@string/category_prestige" />

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/ic_categories_padding"
                    android:gravity="center"
                    android:onClick="@{()-> rend.onClickCategoryActions()}"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_margin="@dimen/ic_categories_image_padding"
                        android:gravity="center"

                        android:layout_width="@dimen/ic_categories_size"
                        android:layout_height="@dimen/ic_categories_size"
                        android:src="@drawable/fireworks" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumBlackText"

                        android:text="@string/category_events" />

                </LinearLayout>

                <LinearLayout
                    android:layout_margin="@dimen/ic_categories_padding"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:onClick="@{()-> rend.onClickCategoryErotic()}"

                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:gravity="center"

                        android:layout_margin="@dimen/ic_categories_image_padding"
                        android:layout_width="@dimen/ic_categories_size"
                        android:layout_height="@dimen/ic_categories_size"
                        android:src="@drawable/heart_cat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/MediumBlackText"

                        android:text="@string/category_erotic" />

                </LinearLayout>

            </LinearLayout>



        </LinearLayout>

    </LinearLayout>
</layout>

