<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.roix.inhype.ui.activity.login.LoginActivity"
    >
    <data>
        <variable name="presenter" type="com.roix.inhype.presentation.presenter.login.LoginPresenter" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/background"
        >
        <RelativeLayout
            android:paddingTop="@dimen/logo_type_padding"
            android:paddingBottom="@dimen/started_inner_padding"
            android:paddingRight="@dimen/started_inner_padding"
            android:paddingLeft="@dimen/started_inner_padding"

            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/button_layout"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:src="@drawable/ic_vk_login"
                    android:padding="@dimen/ic_padding_socnet"
                    android:layout_width="@dimen/ic_size_socnet"
                    android:layout_height="@dimen/ic_size_socnet" />
                <ImageView
                    android:src="@drawable/ic_facebook_login"
                    android:padding="@dimen/ic_padding_socnet"

                    android:layout_width="@dimen/ic_size_socnet"
                    android:layout_height="@dimen/ic_size_socnet" />
                <ImageView
                    android:src="@drawable/ic_tweeter_login"
                    android:padding="@dimen/ic_padding_socnet"

                    android:layout_width="@dimen/ic_size_socnet"
                    android:layout_height="@dimen/ic_size_socnet" />
                <ImageView
                    android:src="@drawable/ic_g_plus_login"
                    android:padding="@dimen/ic_padding_socnet"

                    android:layout_width="@dimen/ic_size_socnet"
                    android:layout_height="@dimen/ic_size_socnet" />

            </LinearLayout>
            <EditText
                android:id="@+id/login_edit_text"
                android:layout_below="@id/button_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_singin_name"
                style="@style/EditTextStartStyle"
                android:paddingTop="@dimen/started_inner_padding"
                android:inputType="text"
                android:maxLines="1"
                android:onTextChanged="@{presenter.onLoginTextChanged}"
                />
            <EditText
                android:layout_below="@id/login_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_singin_password"
                style="@style/EditTextStartStyle"
                android:inputType="textPassword"
                android:maxLines="1"
                android:onTextChanged="@{presenter.onPasswordTestChanged}"

                />

            <TextView
                android:id="@+id/recover_button"
                android:layout_alignParentBottom="true"
                android:text="@string/title_singin_recover"
                style="@style/TransperentWhiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> presenter.onRecoverPasswordButtonClicked()}"
                />
            <TextView
                android:text="@string/title_singin_login"
                android:layout_above="@id/recover_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> presenter.onLoginButtonClicked()}"
                style="@style/RoundedWhiteText"
                />

        </RelativeLayout>



    </LinearLayout>


</layout>
