<layout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.roix.inhype.ui.activity.register.RegisterActivity"
    >
<data>
    <variable name="presenter" type="com.roix.inhype.presentation.presenter.register.RegisterPresenter" />
</data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <RelativeLayout
                    android:paddingTop="@dimen/logo_type_padding"
                    android:paddingBottom="@dimen/started_inner_padding"
                    android:paddingRight="@dimen/started_inner_padding"
                    android:paddingLeft="@dimen/started_inner_padding"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <LinearLayout
                        android:id="@+id/button_layout"
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:gravity="center"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:src="@drawable/ic_vk_login"
                            android:padding="@dimen/ic_padding_socnet"
                            android:layout_width="@dimen/ic_size_socnet"
                            android:layout_height="@dimen/ic_size_socnet" />
                        <ImageView
                            android:src="@drawable/ic_facebook_login"
                            android:padding="@dimen/ic_padding_socnet"
                            android:layout_width="@dimen/ic_size_socnet"
                            android:layout_height="@dimen/ic_size_socnet" />
                        <ImageView
                            android:src="@drawable/ic_tweeter_login"
                            android:padding="@dimen/ic_padding_socnet"
                            android:layout_width="@dimen/ic_size_socnet"
                            android:layout_height="@dimen/ic_size_socnet" />
                        <ImageView
                            android:src="@drawable/ic_g_plus_login"
                            android:padding="@dimen/ic_padding_socnet"
                            android:layout_width="@dimen/ic_size_socnet"
                            android:layout_height="@dimen/ic_size_socnet" />


                    </LinearLayout>
                    <EditText
                        android:layout_below="@id/button_layout"
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/EditTextStartStyle"
                        android:paddingTop="@dimen/started_inner_padding"
                        android:hint="@string/prompt_singup_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:onTextChanged="@{presenter.onEmailTextChanged}"
                        />
                    <EditText
                        android:id="@+id/username_edit_text"
                        android:layout_below="@id/email_edit_text"
                        style="@style/EditTextStartStyle"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_singup_name"
                        android:maxLines="1"
                        android:onTextChanged="@{presenter.onLoginTextChanged}"
                        />

                    <EditText
                        android:id="@+id/password_edit_text"
                        android:layout_below="@id/username_edit_text"
                        style="@style/EditTextStartStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_singup_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:onTextChanged="@{presenter.onPasswordTestChanged}"

                        />

                    <TextView
                        android:id="@+id/register_button"
                        android:text="@string/title_singup_register"
                        android:layout_alignParentBottom="true"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:onClick="@{() -> presenter.onRegisterButtonClicked()}"
                        style="@style/RoundedWhiteText"
                        />

                </RelativeLayout>


            </LinearLayout>

        </RelativeLayout>
    </FrameLayout>



</layout>
